crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__nullable_enum_snapshot@nullable_enum_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type StatusType string

const (
	StatusTypeActive   StatusType = "active"
	StatusTypeInactive StatusType = "inactive"
)

type NullableEnum struct {
	ID     int32       `gorm:"column:id;primaryKey" json:"id"`
	Status *StatusType `gorm:"column:status" json:"status"`
}

func (NullableEnum) TableName() string { return "nullable_enum" }
