crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__nullable_enum_snapshot@nullable_enum_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
enum StatusType {
  ACTIVE @map("active")
  INACTIVE @map("inactive")
}

model NullableEnum {
  id Int @id
  status StatusType?

  @@map("nullable_enum")
}
