crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__numeric_default_value_snapshot@numeric_default_value_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const products = pgTable("products", {
  id: integer("id").notNull(),
  price: numeric("price", { precision: 10, scale: 2 }).notNull().default("0"),
});
