crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__numeric_default_value_snapshot@numeric_default_value_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

import (
	"github.com/shopspring/decimal"
)

type Products struct {
	ID    int32           `gorm:"column:id;not null" json:"id"`
	Price decimal.Decimal `gorm:"column:price;not null;type:numeric(10,2);default:0" json:"price"`
}

func (Products) TableName() string { return "products" }
